[gd_scene load_steps=8 format=2]

[ext_resource path="res://vylsnep.gd" type="Script" id=1]
[ext_resource path="res://Untitled.png" type="Texture" id=2]
[ext_resource path="res://cactus.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://character.tscn" type="PackedScene" id=5]
[ext_resource path="res://desert_fight.tscn" type="PackedScene" id=6]
[ext_resource path="res://options.tscn" type="PackedScene" id=7]

[node name="vylsnep" type="Node2D" index="0"]

position = Vector2( 0, 0.799685 )
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="." index="0"]

position = Vector2( 481.156, 294.866 )
scale = Vector2( 0.656381, 0.513859 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="cactus" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 595.731, 322.386 )
scale = Vector2( 0.457925, 0.427508 )

[node name="enemy" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 552.176, 282.061 )
scale = Vector2( 0.244505, 0.248091 )

[node name="character" parent="." index="3" instance=ExtResource( 5 )]

[node name="Camera2D" parent="character" index="2"]

editor/display_folded = true

[node name="desert_fight" parent="." index="4" instance=ExtResource( 6 )]

visible = false
position = Vector2( 15.7053, 14.5329 )
scale = Vector2( 1.01843, 0.989405 )

[node name="enemy_attack_timer" type="Timer" parent="." index="5"]

pause_mode = 2
process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false
_sections_unfolded = [ "Pause" ]

[node name="options" parent="." index="6" instance=ExtResource( 7 )]

visible = false
position = Vector2( -2.68023, 28.4725 )
scale = Vector2( 1.10011, 1 )
_sections_unfolded = [ "Pause", "Transform" ]

[connection signal="timeout" from="enemy_attack_timer" to="." method="_on_enemy_attack_timer_timeout"]


[editable path="character"]
